# resend-blade-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml  sidereal-plugin.yaml  stallari-plugin.yaml
.github/workflows/: ci.yml
src/resend_blade_mcp/: __init__.py  __main__.py  auth.py  client.py  formatters.py  models.py  server.py
tests/: conftest.py  test_client.py  test_formatters.py  test_models.py  test_server.py
tests/e2e/: conftest.py  test_e2e_read.py
